finish the record panel UI

--- a/src/main/resources/templates/common/aside.html
+++ b/src/main/resources/templates/common/aside.html
@@ -52,9 +52,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="./index2.html" class="nav-link">
+                            <a th:href="@{/listRecord}" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>设置面板</p>
+                                <p>记录界面</p>
                             </a>
                         </li>
                     </ul>
