--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
   <div th:replace="~{common/nav::navigate}"></div>
 
   <!-- Main Sidebar Container -->
-  <div th:replace="~{common/aside::adiseBar}"></div>
+  <div th:replace="~{common/aside::adiseBar(active='index.html')}"></div>
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
