--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -37,7 +37,7 @@
     <div th:replace="~{common/nav::navigate}"></div>
 
     <!-- Main Sidebar Container -->
-    <div th:replace="~{common/aside::adiseBar}"></div>
+    <div th:replace="~{common/aside::adiseBar(active='setting.html')}"></div>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
@@ -70,8 +70,8 @@
                             <form>
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">评分</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                                        <label>评分</label>
+                                        <input class="form-control" placeholder="100">
                                     </div>
                                     <div class="form-group">
                                         <label>原因</label>
@@ -92,7 +92,7 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="card-title">Responsive Hover Table</h3>
+                                <h3 class="card-title">评分历史记录</h3>
 
                                 <div class="card-tools">
                                     <div class="input-group input-group-sm" style="width: 150px;">
