--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -40,7 +40,7 @@
     <form th:action="@{/user/login}">
         <img class="mb-4" th:src="@{/img/pig.png}" alt="" width="72" height="72">
         <h1 class="h3 mb-3 fw-normal">请登录</h1>
-        <p style="color:red"></p>
+        <p style="color:red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
         <div class="form-floating">
             <input type="text" name="username" class="form-control" id="floatingInput">
             <label for="floatingInput">账号</label>
